; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/usp10/extr_shape.c_combining_lexical_Thai.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/usp10/extr_shape.c_combining_lexical_Thai.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @combining_lexical_Thai to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @combining_lexical_Thai(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %12 [
    i32 3633, label %5
    i32 3636, label %5
    i32 3637, label %5
    i32 3638, label %5
    i32 3639, label %5
    i32 3655, label %6
    i32 3661, label %6
    i32 3656, label %7
    i32 3657, label %7
    i32 3658, label %7
    i32 3659, label %7
    i32 3660, label %8
    i32 3662, label %8
    i32 3640, label %9
    i32 3641, label %9
    i32 3642, label %10
    i32 3635, label %11
  ]

5:                                                ; preds = %1, %1, %1, %1, %1
  store i32 1, i32* %2, align 4
  br label %13

6:                                                ; preds = %1, %1
  store i32 2, i32* %2, align 4
  br label %13

7:                                                ; preds = %1, %1, %1, %1
  store i32 3, i32* %2, align 4
  br label %13

8:                                                ; preds = %1, %1
  store i32 4, i32* %2, align 4
  br label %13

9:                                                ; preds = %1, %1
  store i32 5, i32* %2, align 4
  br label %13

10:                                               ; preds = %1
  store i32 6, i32* %2, align 4
  br label %13

11:                                               ; preds = %1
  store i32 7, i32* %2, align 4
  br label %13

12:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %13

13:                                               ; preds = %12, %11, %10, %9, %8, %7, %6, %5
  %14 = load i32, i32* %2, align 4
  ret i32 %14
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
